- Fixed broken exception handling in DOMSClient. - RadioTVMetadataProcessor now writes a file containing the PIDs of all ingested objects for each failed pre-ingest file. This is useful for debugging and cleaning up.